test-expected/large/reportviewernaturallanguageunderstanding/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: reportViewerNaturalLanguageUnderstanding
    foo.com/duversion: 1.2.380-20190925.1569390558401
    foo.com/version: 1.2.380
  labels:
    app.kubernetes.io/name: reportviewernaturallanguageunderstanding
    helm.sh/chart: reportviewernaturallanguageunderstanding-1.2.380
  name: reportviewernaturallanguageunderstanding
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /reportViewerNaturalLanguageUnderstanding
    - uri:
        prefix: /reportViewerNaturalLanguageUnderstanding/
    route:
    - destination:
        host: reportviewernaturallanguageunderstanding.peekay.svc.cluster.local
